Cleaned for deprecation code